Pages headers + New images on home page + Fixes some bugs on small devices

--- a/public/stylesheets/partials/_countdown.scss
+++ b/public/stylesheets/partials/_countdown.scss
@@ -59,4 +59,8 @@
     .countdown-bg {
         font-size: 2em;
     }
+
+    .countdown-parent {
+        margin-bottom: 3em;
+    }
 }
