--- a/public/stylesheets/partials/_newsletter.scss
+++ b/public/stylesheets/partials/_newsletter.scss
@@ -3,6 +3,7 @@
     margin-bottom: 4em;
     text-align: center;
 
-    &-title {
+    &-form {
+        margin-top: 3em;
     }
 }
